# text2sql-oracle

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: schema.json
src/01_db/: seed_data.sql  setup_db.py
src/ch3_1_select_ai/: setup_select_ai.sql
src/ch3_2_cloud_llm/: main.py
src/ch3_3_self_hosted/: main.py
src/ch3_4_rag_vector/: main.py  setup_vectors.py
